--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="profile">Профиль</string>
     <string name="my_activity">Моя</string>
     <string name="users_activity">Пользователей</string>
+    <string name="comment">Комментарий</string>
 </resources>
